Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 6.0.0-beta1
-
-
25a7f30ffc8fcfc75040949e95d64e866653a10e
Description
Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libsystem_kernel.dylib 0x0000000185ca4e68 __pthread_kill + 8 1 libsystem_pthread.dylib 0x0000000185cd743c pthread_kill + 292 2 libsystem_c.dylib 0x0000000185c1f460 abort + 104 3 libsystem_malloc.dylib 0x0000000185b07fb4 malloc_vreport + 560 4 libsystem_malloc.dylib 0x0000000185b0b5fc malloc_report + 64 5 libsystem_malloc.dylib 0x0000000185afa6f4 free + 516 6 libCppEditor.dylib 0x00000001294fd6bc CppEditor::SemanticHighlighter::~SemanticHighlighter() + 44 (semantichighlighter.cpp:123) 7 org.qt-project.QtCore 0x000000010459ea98 QObjectPrivate::deleteChildren() + 192 8 org.qt-project.QtCore 0x000000010459e828 QObject::~QObject() + 2000 9 libCore.dylib 0x000000010df83320 Core::IDocument::~IDocument() + 100 (idocument.cpp:261) 10 libCore.dylib 0x000000010e145be4 Core::BaseTextDocument::~BaseTextDocument() + 84 (textdocument.cpp:72) 11 libTextEditor.dylib 0x0000000118a088e8 TextEditor::TextDocument::~TextDocument() + 84 (textdocument.cpp:259) 12 libCppEditor.dylib 0x0000000129052ac0 CppEditor::Internal::CppEditorDocument::~CppEditorDocument() + 156 (cppeditordocument.h:44) 13 libCppEditor.dylib 0x000000012901c510 CppEditor::Internal::CppEditorDocument::~CppEditorDocument() + 32 (cppeditordocument.h:44) 14 libCppEditor.dylib 0x000000012901c544 CppEditor::Internal::CppEditorDocument::~CppEditorDocument() + 32 (cppeditordocument.h:44) 15 libTextEditor.dylib 0x0000000118ab41e4 QtSharedPointer::CustomDeleter<TextEditor::TextDocument, QtSharedPointer::NormalDeleter>::execute() + 52 (qsharedpointer_impl.h:190) 16 libTextEditor.dylib 0x0000000118ab40e4 QtSharedPointer::ExternalRefCountWithCustomDeleter<TextEditor::TextDocument, QtSharedPointer::NormalDeleter>::deleter(QtSharedPointer::ExternalRefCountData*) + 36 (qsharedpointer_impl.h:208) 17 libTextEditor.dylib 0x0000000118848548 QtSharedPointer::ExternalRefCountData::destroy() + 32 (qsharedpointer_impl.h:146) 18 libTextEditor.dylib 0x0000000118a73908 QSharedPointer<TextEditor::TextDocument>::deref(QtSharedPointer::ExternalRefCountData*) + 52 (qsharedpointer_impl.h:477) 19 libTextEditor.dylib 0x0000000118a738c8 QSharedPointer<TextEditor::TextDocument>::deref() + 28 (qsharedpointer_impl.h:472) 20 libTextEditor.dylib 0x0000000118a7389c QSharedPointer<TextEditor::TextDocument>::~QSharedPointer() + 32 (qsharedpointer_impl.h:312) 21 libTextEditor.dylib 0x0000000118a23aa8 QSharedPointer<TextEditor::TextDocument>::~QSharedPointer() + 32 (qsharedpointer_impl.h:312) 22 libTextEditor.dylib 0x0000000118a24188 TextEditor::Internal::TextEditorWidgetPrivate::~TextEditorWidgetPrivate() + 1680 (texteditor.cpp:870) 23 libTextEditor.dylib 0x0000000118a2424c TextEditor::Internal::TextEditorWidgetPrivate::~TextEditorWidgetPrivate() + 32 (texteditor.cpp:856) 24 libTextEditor.dylib 0x0000000118a24280 TextEditor::Internal::TextEditorWidgetPrivate::~TextEditorWidgetPrivate() + 32 (texteditor.cpp:856) 25 libTextEditor.dylib 0x0000000118a2941c TextEditor::TextEditorWidget::~TextEditorWidget() + 88 (texteditor.cpp:1112) 26 libCppEditor.dylib 0x00000001291f5408 CppEditor::CppEditorWidget::~CppEditorWidget() + 72 (cppeditorwidget.cpp:610) 27 libCppEditor.dylib 0x00000001291f543c CppEditor::CppEditorWidget::~CppEditorWidget() + 32 (cppeditorwidget.cpp:610) 28 libCppEditor.dylib 0x00000001291f548c CppEditor::CppEditorWidget::~CppEditorWidget() + 32 (cppeditorwidget.cpp:610) 29 libTextEditor.dylib 0x0000000118a54edc TextEditor::BaseTextEditor::~BaseTextEditor() + 88 (texteditor.cpp:7471) 30 libTextEditor.dylib 0x0000000118a54f48 TextEditor::BaseTextEditor::~BaseTextEditor() + 32 (texteditor.cpp:7470) 31 libTextEditor.dylib 0x0000000118a54f7c TextEditor::BaseTextEditor::~BaseTextEditor() + 32 (texteditor.cpp:7470) 32 libCore.dylib 0x000000010de05358 Core::Internal::EditorManagerPrivate::closeEditors(QList<Core::IEditor*> const&, Core::Internal::EditorManagerPrivate::CloseFlag) + 3864 (editormanager.cpp:1768) 33 libCore.dylib 0x000000010ddfff00 Core::EditorManager::closeEditors(QList<Core::IEditor*> const&, bool) + 52 (editormanager.cpp:3009) 34 libCore.dylib 0x000000010de04400 Core::EditorManager::closeDocuments(QList<Core::IDocument*> const&, bool) + 64 (editormanager.cpp:3392) 35 libCore.dylib 0x000000010de09c90 Core::EditorManager::closeAllEditors(bool) + 64 (editormanager.cpp:2729) 36 libCore.dylib 0x000000010de29a68 Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11::operator()() const + 28 (editormanager.cpp:728) 37 libCore.dylib 0x000000010de29a28 decltype(std::__1::forward<Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11&>(fp)()) std::__1::__invoke<Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11&>(Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11&) + 28 (type_traits:3747) 38 libCore.dylib 0x000000010de299d8 bool std::__1::__invoke_void_return_wrapper<bool>::__call<Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11&>(Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11&) + 28 (__functional_base:317) 39 libCore.dylib 0x000000010de299ac std::__1::__function::__alloc_func<Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11, std::__1::allocator<Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11>, bool ()>::operator()() + 28 (functional:1553) 40 libCore.dylib 0x000000010de28430 std::__1::__function::__func<Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11, std::__1::allocator<Core::Internal::EditorManagerPrivate::extensionsInitialized()::$_11>, bool ()>::operator()() + 28 (functional:1727) 41 libCore.dylib 0x000000010df94548 std::__1::__function::__value_func<bool ()>::operator()() const + 60 (functional:1880) 42 libCore.dylib 0x000000010df91200 std::__1::function<bool ()>::operator()() const + 24 (functional:2555) 43 libCore.dylib 0x000000010e04afec Core::Internal::MainWindow::closeEvent(QCloseEvent*) + 1188 (mainwindow.cpp:372) 44 org.qt-project.QtWidgets 0x000000010375b944 QWidget::event(QEvent*) + 132 45 org.qt-project.QtWidgets 0x000000010386f3dc QMainWindow::event(QEvent*) + 248 46 org.qt-project.QtWidgets 0x00000001037139e4 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 272 47 org.qt-project.QtWidgets 0x0000000103714c24 QApplication::notify(QObject*, QEvent*) + 544 48 org.qt-project.QtCore 0x0000000104560df0 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 208 49 org.qt-project.QtWidgets 0x000000010374ca38 QWidgetPrivate::close_helper(QWidgetPrivate::CloseMode) + 196 50 org.qt-project.QtWidgets 0x000000010376fb98 0x103708000 + 424856 51 org.qt-project.QtWidgets 0x00000001037139e4 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 272 52 org.qt-project.QtWidgets 0x0000000103714c24 QApplication::notify(QObject*, QEvent*) + 544 53 org.qt-project.QtCore 0x0000000104560df0 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 208 54 org.qt-project.QtGui 0x0000000103d1fd04 QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) + 1972 55 org.qt-project.QtGui 0x0000000103d633c0 bool QWindowSystemInterfacePrivate::handleWindowSystemEvent<QWindowSystemInterface::SynchronousDelivery>(QWindowSystemInterfacePrivate::WindowSystemEvent*) + 216 56 org.qt-project.QtGui 0x0000000103d5fae8 QWindow::close() + 76 57 libCore.dylib 0x000000010e05b40c QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, bool, bool (QWidget::*)()>::call(bool (QWidget::*)(), QWidget*, void**) + 116 (qobjectdefs_impl.h:152) 58 libCore.dylib 0x000000010e05b358 void QtPrivate::FunctionPointer<bool (QWidget::*)()>::call<QtPrivate::List<>, bool>(bool (QWidget::*)(), QWidget*, void**) + 80 (qobjectdefs_impl.h:185) 59 libCore.dylib 0x000000010e05b25c QtPrivate::QSlotObject<bool (QWidget::*)(), QtPrivate::List<>, bool>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 156 (qobjectdefs_impl.h:395) 60 org.qt-project.QtCore 0x000000010459f4a4 QObject::event(QEvent*) + 588 61 org.qt-project.QtWidgets 0x000000010375c73c QWidget::event(QEvent*) + 3708 62 org.qt-project.QtWidgets 0x000000010386f3dc QMainWindow::event(QEvent*) + 248 63 org.qt-project.QtWidgets 0x00000001037139e4 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 272 64 org.qt-project.QtWidgets 0x0000000103714c24 QApplication::notify(QObject*, QEvent*) + 544 65 org.qt-project.QtCore 0x0000000104560df0 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 208 66 org.qt-project.QtCore 0x00000001045620c8 QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) + 820 67 libqcocoa.dylib 0x000000010ae65eb8 0x10ae50000 + 89784 68 libqcocoa.dylib 0x000000010ae66568 0x10ae50000 + 91496 69 com.apple.CoreFoundation 0x0000000185dd6ad4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 28 70 com.apple.CoreFoundation 0x0000000185dd6a20 __CFRunLoopDoSource0 + 208 71 com.apple.CoreFoundation 0x0000000185dd670c __CFRunLoopDoSources0 + 268 72 com.apple.CoreFoundation 0x0000000185dd5094 __CFRunLoopRun + 820 73 com.apple.CoreFoundation 0x0000000185dd45e8 CFRunLoopRunSpecific + 600 74 com.apple.HIToolbox 0x000000018dcef2a0 RunCurrentEventLoopInMode + 292 75 com.apple.HIToolbox 0x000000018dcef014 ReceiveNextEventCommon + 552 76 com.apple.HIToolbox 0x000000018dceedd4 _BlockUntilNextEventMatchingListInModeWithFilter + 72 77 com.apple.AppKit 0x00000001885c3480 _DPSNextEvent + 836 78 com.apple.AppKit 0x00000001885c1e20 -[NSApplication(NSEvent) _nextEventMatchingEventMask:untilDate:inMode:dequeue:] + 1292 79 com.apple.AppKit 0x00000001885b3cac -[NSApplication run] + 596 80 libqcocoa.dylib 0x000000010ae652dc 0x10ae50000 + 86748 81 org.qt-project.QtCore 0x000000010456a168 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 500 82 org.qt-project.QtCore 0x00000001045614d0 QCoreApplication::exec() + 128 83 org.qt-project.qtcreator 0x0000000102077e9c main + 12396 (main.cpp:771) 84 libdyld.dylib 0x0000000185cf5450 start + 4
Attachments
Issue Links
- is duplicated by
-
QTCREATORBUG-26379 Clangd: Crash on closing QC
- Closed
For Gerrit Dashboard: QTCREATORBUG-26364 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
375470,3 | ClangCodeModel: Do not hold highlighters by value in ClangdClient | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |