ClangCodeModel: Do not hold highlighters by value in ClangdClient

Semantic highlighter objects are owned by their respective documents, so
we can run into destruction issues when keeping them by value.

Fixes: QTCREATORBUG-26364
Change-Id: Idc128d685ccdd25989dd9389d352453ccc935fa9
Reviewed-by: Eike Ziller <eike.ziller@qt.io>